lexer_parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Model
Rule 1     empty -> <empty>
Rule 2     ClassIdentifier -> IDENTIFIER
Rule 3     BlockIdentifier -> IDENTIFIER
Rule 4     EventPath -> IDENTIFIER POINT IDENTIFIER
Rule 5     AndCommercialEvenPathStar -> empty
Rule 6     AndCommercialEvenPathStar -> ANDCOMMERCIAL EventPath AndCommercialEvenPathStar
Rule 7     MacroEventDefinition -> EventIdentifierInSynchronization DEUXPOINTS EventPath AndCommercialEvenPathStar
Rule 8     EventIdentifierInSynchronization -> IDENTIFIER
Rule 9     Synchronization -> MacroEventDefinition
Rule 10    SynchronizationStar -> empty
Rule 11    SynchronizationStar -> Synchronization SynchronizationStar
Rule 12    SynchronizationClause -> SYNCHRONIZATION SynchronizationStar
Rule 13    ClassNameIdentifier -> IDENTIFIER
Rule 14    ClassInstanceIdentifier -> IDENTIFIER
Rule 15    ClassInstanceVirguleIdentifierStar -> empty
Rule 16    ClassInstanceVirguleIdentifierStar -> VIRGULE ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
Rule 17    ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
Rule 18    ComposedBlockClause -> Block
Rule 19    ComposedBlockClause -> ClassInstance
Rule 20    ComposedBlockClause -> Block ComposedBlockClause
Rule 21    ComposedBlockClause -> ClassInstance ComposedBlockClause
Rule 22    StateIdentifier -> IDENTIFIER
Rule 23    Transition -> EventIdentifierInTransition DEUXPOINTS OriginalStateIdentifierInTransition FLECHE DestStateIdentifierInTransition
Rule 24    OriginalStateIdentifierInTransition -> IDENTIFIER
Rule 25    DestStateIdentifierInTransition -> IDENTIFIER
Rule 26    EventIdentifierInTransition -> IDENTIFIER
Rule 27    TransitionStar -> empty
Rule 28    TransitionStar -> Transition TransitionStar
Rule 29    TransitionClause -> TRANSITION TransitionStar
Rule 30    EventClauseInClass -> EVENT EventIdentifierInClass EventVirguleIdentifierStarInClass
Rule 31    EventIdentifierInClass -> IDENTIFIER
Rule 32    EventClauseInBlock -> EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock
Rule 33    EventVirguleIdentifierStarInBlock -> empty
Rule 34    EventVirguleIdentifierStarInBlock -> VIRGULE EventIdentifierInBlock EventVirguleIdentifierStarInBlock
Rule 35    EventIdentifierInBlock -> IDENTIFIER
Rule 36    StateClause -> STATE StateIdentifier StateVirguleIdentifierStar
Rule 37    EventVirguleIdentifierStarInClass -> empty
Rule 38    EventVirguleIdentifierStarInClass -> VIRGULE EventIdentifierInClass EventVirguleIdentifierStarInClass
Rule 39    StateVirguleIdentifierStar -> empty
Rule 40    StateVirguleIdentifierStar -> VIRGULE StateIdentifier StateVirguleIdentifierStar
Rule 41    StatePathIdentifier -> IDENTIFIER
Rule 42    PointStatePathIdentifierStar -> empty
Rule 43    PointStatePathIdentifierStar -> POINT StatePathIdentifier PointStatePathIdentifierStar
Rule 44    StatePath -> StatePathIdentifier PointStatePathIdentifierStar
Rule 45    StatePathNot -> StatePathIdentifier PointStatePathIdentifierStar
Rule 46    AndStatePath -> StatePathIdentifier PointStatePathIdentifierStar
Rule 47    AndStatePathNot -> StatePathIdentifier PointStatePathIdentifierStar
Rule 48    OrStatePathNot -> StatePathIdentifier PointStatePathIdentifierStar
Rule 49    OrStatePath -> StatePathIdentifier PointStatePathIdentifierStar
Rule 50    AtomicObserver -> StatePath
Rule 51    AtomicObserver -> LEFTBRACKET Observer RIGHTBRACKET
Rule 52    AtomicObserverNot -> StatePathNot
Rule 53    AtomicObserverNot -> LEFTBRACKET Observer RIGHTBRACKET
Rule 54    ObserverNot -> NOT AtomicObserverNot
Rule 55    ObserverNot -> AtomicObserver
Rule 56    OrAtomicObserver -> OrStatePath
Rule 57    OrAtomicObserver -> LEFTBRACKET Observer RIGHTBRACKET
Rule 58    OrAtomicObserverNot -> OrStatePathNot
Rule 59    OrAtomicObserverNot -> LEFTBRACKET Observer RIGHTBRACKET
Rule 60    AndAtomicObserverNot -> AndStatePathNot
Rule 61    AndAtomicObserverNot -> LEFTBRACKET Observer RIGHTBRACKET
Rule 62    AndAtomicObserver -> AndStatePath
Rule 63    AndAtomicObserver -> LEFTBRACKET Observer RIGHTBRACKET
Rule 64    AndObserverNot -> NOT AndAtomicObserverNot
Rule 65    AndObserverNot -> AndAtomicObserver
Rule 66    AndObserverNotStar -> empty
Rule 67    AndObserverNotStar -> AND AndObserverNot AndObserverNotStar
Rule 68    ObserverAnd -> ObserverNot AndObserverNotStar
Rule 69    OrObserverNot -> NOT OrAtomicObserverNot
Rule 70    OrObserverNot -> OrAtomicObserver
Rule 71    OrObserverAnd -> OrObserverNot AndObserverNotStar
Rule 72    OrObserverAndStar -> empty
Rule 73    OrObserverAndStar -> OR OrObserverAnd OrObserverAndStar
Rule 74    ObserverOr -> ObserverAnd OrObserverAndStar
Rule 75    ObserverIdentifier -> IDENTIFIER
Rule 76    Observer -> ObserverIdentifier DEUXPOINTS ObserverOr
Rule 77    ObserverStar -> empty
Rule 78    ObserverStar -> Observer ObserverStar
Rule 79    ObserverClauseQuestionMark -> empty
Rule 80    ObserverClauseQuestionMark -> OBSERVER ObserverStar
Rule 81    InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
Rule 82    BasicBlockBody -> StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
Rule 83    BlockBody -> BasicBlockBody
Rule 84    BlockBody -> InternalBlockBody
Rule 85    EndBlock -> END
Rule 86    EndClass -> END
Rule 87    Class -> CLASS ClassIdentifier BlockBody EndClass
Rule 88    Block -> BLOCK BlockIdentifier BlockBody EndBlock
Rule 89    Model -> Block Model
Rule 90    Model -> Class Model
Rule 91    Model -> empty

Terminals, with rules where they appear

AND                  : 67
ANDCOMMERCIAL        : 6
BLOCK                : 88
CLASS                : 87
DEUXPOINTS           : 7 23 76
END                  : 85 86
EVENT                : 30 32
FLECHE               : 23
IDENTIFIER           : 2 3 4 4 8 13 14 22 24 25 26 31 35 41 75
LEFTBRACKET          : 51 53 57 59 61 63
NOT                  : 54 64 69
OBSERVER             : 80
OR                   : 73
POINT                : 4 43
RIGHTBRACKET         : 51 53 57 59 61 63
STATE                : 36
SYNCHRONIZATION      : 12
TRANSITION           : 29
VIRGULE              : 16 34 38 40
error                : 

Nonterminals, with rules where they appear

AndAtomicObserver    : 65
AndAtomicObserverNot : 64
AndCommercialEvenPathStar : 6 7
AndObserverNot       : 67
AndObserverNotStar   : 67 68 71
AndStatePath         : 62
AndStatePathNot      : 60
AtomicObserver       : 55
AtomicObserverNot    : 54
BasicBlockBody       : 83
Block                : 18 20 89
BlockBody            : 87 88
BlockIdentifier      : 88
Class                : 90
ClassIdentifier      : 87
ClassInstance        : 19 21
ClassInstanceIdentifier : 16 17
ClassInstanceVirguleIdentifierStar : 16 17
ClassNameIdentifier  : 17
ComposedBlockClause  : 20 21 81
DestStateIdentifierInTransition : 23
EndBlock             : 88
EndClass             : 87
EventClauseInBlock   : 81
EventClauseInClass   : 82
EventIdentifierInBlock : 32 34
EventIdentifierInClass : 30 38
EventIdentifierInSynchronization : 7
EventIdentifierInTransition : 23
EventPath            : 6 7
EventVirguleIdentifierStarInBlock : 32 34
EventVirguleIdentifierStarInClass : 30 38
InternalBlockBody    : 84
MacroEventDefinition : 9
Model                : 89 90 0
Observer             : 51 53 57 59 61 63 78
ObserverAnd          : 74
ObserverClauseQuestionMark : 81 82
ObserverIdentifier   : 76
ObserverNot          : 68
ObserverOr           : 76
ObserverStar         : 78 80
OrAtomicObserver     : 70
OrAtomicObserverNot  : 69
OrObserverAnd        : 73
OrObserverAndStar    : 73 74
OrObserverNot        : 71
OrStatePath          : 56
OrStatePathNot       : 58
OriginalStateIdentifierInTransition : 23
PointStatePathIdentifierStar : 43 44 45 46 47 48 49
StateClause          : 82
StateIdentifier      : 36 40
StatePath            : 50
StatePathIdentifier  : 43 44 45 46 47 48 49
StatePathNot         : 52
StateVirguleIdentifierStar : 36 40
Synchronization      : 11
SynchronizationClause : 81
SynchronizationStar  : 11 12
Transition           : 28
TransitionClause     : 82
TransitionStar       : 28 29
empty                : 5 10 15 27 33 37 39 42 66 72 77 79 91

Parsing method: LALR

state 0

    (0) S' -> . Model
    (89) Model -> . Block Model
    (90) Model -> . Class Model
    (91) Model -> . empty
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (87) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 3
    CLASS           shift and go to state 1
    $end            reduce using rule 1 (empty -> .)

    Model                          shift and go to state 2
    empty                          shift and go to state 4
    Class                          shift and go to state 5
    Block                          shift and go to state 6

state 1

    (87) Class -> CLASS . ClassIdentifier BlockBody EndClass
    (2) ClassIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    ClassIdentifier                shift and go to state 8

state 2

    (0) S' -> Model .



state 3

    (88) Block -> BLOCK . BlockIdentifier BlockBody EndBlock
    (3) BlockIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    BlockIdentifier                shift and go to state 9

state 4

    (91) Model -> empty .

    $end            reduce using rule 91 (Model -> empty .)


state 5

    (90) Model -> Class . Model
    (89) Model -> . Block Model
    (90) Model -> . Class Model
    (91) Model -> . empty
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (87) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 3
    CLASS           shift and go to state 1
    $end            reduce using rule 1 (empty -> .)

    Model                          shift and go to state 11
    empty                          shift and go to state 4
    Class                          shift and go to state 5
    Block                          shift and go to state 6

state 6

    (89) Model -> Block . Model
    (89) Model -> . Block Model
    (90) Model -> . Class Model
    (91) Model -> . empty
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (87) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 3
    CLASS           shift and go to state 1
    $end            reduce using rule 1 (empty -> .)

    Model                          shift and go to state 12
    empty                          shift and go to state 4
    Class                          shift and go to state 5
    Block                          shift and go to state 6

state 7

    (2) ClassIdentifier -> IDENTIFIER .

    STATE           reduce using rule 2 (ClassIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 2 (ClassIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 2 (ClassIdentifier -> IDENTIFIER .)


state 8

    (87) Class -> CLASS ClassIdentifier . BlockBody EndClass
    (83) BlockBody -> . BasicBlockBody
    (84) BlockBody -> . InternalBlockBody
    (82) BasicBlockBody -> . StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (81) InternalBlockBody -> . ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (36) StateClause -> . STATE StateIdentifier StateVirguleIdentifierStar
    (18) ComposedBlockClause -> . Block
    (19) ComposedBlockClause -> . ClassInstance
    (20) ComposedBlockClause -> . Block ComposedBlockClause
    (21) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (17) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (13) ClassNameIdentifier -> . IDENTIFIER

    STATE           shift and go to state 16
    BLOCK           shift and go to state 3
    IDENTIFIER      shift and go to state 22

    BasicBlockBody                 shift and go to state 19
    InternalBlockBody              shift and go to state 20
    BlockBody                      shift and go to state 13
    ClassNameIdentifier            shift and go to state 21
    StateClause                    shift and go to state 15
    ComposedBlockClause            shift and go to state 14
    ClassInstance                  shift and go to state 17
    Block                          shift and go to state 18

state 9

    (88) Block -> BLOCK BlockIdentifier . BlockBody EndBlock
    (83) BlockBody -> . BasicBlockBody
    (84) BlockBody -> . InternalBlockBody
    (82) BasicBlockBody -> . StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (81) InternalBlockBody -> . ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (36) StateClause -> . STATE StateIdentifier StateVirguleIdentifierStar
    (18) ComposedBlockClause -> . Block
    (19) ComposedBlockClause -> . ClassInstance
    (20) ComposedBlockClause -> . Block ComposedBlockClause
    (21) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (17) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (13) ClassNameIdentifier -> . IDENTIFIER

    STATE           shift and go to state 16
    BLOCK           shift and go to state 3
    IDENTIFIER      shift and go to state 22

    BasicBlockBody                 shift and go to state 19
    BlockBody                      shift and go to state 23
    InternalBlockBody              shift and go to state 20
    ClassNameIdentifier            shift and go to state 21
    Block                          shift and go to state 18
    StateClause                    shift and go to state 15
    ComposedBlockClause            shift and go to state 14
    ClassInstance                  shift and go to state 17

state 10

    (3) BlockIdentifier -> IDENTIFIER .

    STATE           reduce using rule 3 (BlockIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 3 (BlockIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 3 (BlockIdentifier -> IDENTIFIER .)


state 11

    (90) Model -> Class Model .

    $end            reduce using rule 90 (Model -> Class Model .)


state 12

    (89) Model -> Block Model .

    $end            reduce using rule 89 (Model -> Block Model .)


state 13

    (87) Class -> CLASS ClassIdentifier BlockBody . EndClass
    (86) EndClass -> . END

    END             shift and go to state 24

    EndClass                       shift and go to state 25

state 14

    (81) InternalBlockBody -> ComposedBlockClause . EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (32) EventClauseInBlock -> . EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock

    EVENT           shift and go to state 26

    EventClauseInBlock             shift and go to state 27

state 15

    (82) BasicBlockBody -> StateClause . EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (30) EventClauseInClass -> . EVENT EventIdentifierInClass EventVirguleIdentifierStarInClass

    EVENT           shift and go to state 28

    EventClauseInClass             shift and go to state 29

state 16

    (36) StateClause -> STATE . StateIdentifier StateVirguleIdentifierStar
    (22) StateIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    StateIdentifier                shift and go to state 30

state 17

    (19) ComposedBlockClause -> ClassInstance .
    (21) ComposedBlockClause -> ClassInstance . ComposedBlockClause
    (18) ComposedBlockClause -> . Block
    (19) ComposedBlockClause -> . ClassInstance
    (20) ComposedBlockClause -> . Block ComposedBlockClause
    (21) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (17) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (13) ClassNameIdentifier -> . IDENTIFIER

    EVENT           reduce using rule 19 (ComposedBlockClause -> ClassInstance .)
    BLOCK           shift and go to state 3
    IDENTIFIER      shift and go to state 22

    ClassNameIdentifier            shift and go to state 21
    ComposedBlockClause            shift and go to state 32
    ClassInstance                  shift and go to state 17
    Block                          shift and go to state 18

state 18

    (18) ComposedBlockClause -> Block .
    (20) ComposedBlockClause -> Block . ComposedBlockClause
    (18) ComposedBlockClause -> . Block
    (19) ComposedBlockClause -> . ClassInstance
    (20) ComposedBlockClause -> . Block ComposedBlockClause
    (21) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (88) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (17) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (13) ClassNameIdentifier -> . IDENTIFIER

    EVENT           reduce using rule 18 (ComposedBlockClause -> Block .)
    BLOCK           shift and go to state 3
    IDENTIFIER      shift and go to state 22

    ClassNameIdentifier            shift and go to state 21
    ComposedBlockClause            shift and go to state 33
    ClassInstance                  shift and go to state 17
    Block                          shift and go to state 18

state 19

    (83) BlockBody -> BasicBlockBody .

    END             reduce using rule 83 (BlockBody -> BasicBlockBody .)


state 20

    (84) BlockBody -> InternalBlockBody .

    END             reduce using rule 84 (BlockBody -> InternalBlockBody .)


state 21

    (17) ClassInstance -> ClassNameIdentifier . ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassInstanceIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 35

    ClassInstanceIdentifier        shift and go to state 34

state 22

    (13) ClassNameIdentifier -> IDENTIFIER .

    IDENTIFIER      reduce using rule 13 (ClassNameIdentifier -> IDENTIFIER .)


state 23

    (88) Block -> BLOCK BlockIdentifier BlockBody . EndBlock
    (85) EndBlock -> . END

    END             shift and go to state 37

    EndBlock                       shift and go to state 36

state 24

    (86) EndClass -> END .

    BLOCK           reduce using rule 86 (EndClass -> END .)
    CLASS           reduce using rule 86 (EndClass -> END .)
    $end            reduce using rule 86 (EndClass -> END .)


state 25

    (87) Class -> CLASS ClassIdentifier BlockBody EndClass .

    BLOCK           reduce using rule 87 (Class -> CLASS ClassIdentifier BlockBody EndClass .)
    CLASS           reduce using rule 87 (Class -> CLASS ClassIdentifier BlockBody EndClass .)
    $end            reduce using rule 87 (Class -> CLASS ClassIdentifier BlockBody EndClass .)


state 26

    (32) EventClauseInBlock -> EVENT . EventIdentifierInBlock EventVirguleIdentifierStarInBlock
    (35) EventIdentifierInBlock -> . IDENTIFIER

    IDENTIFIER      shift and go to state 38

    EventIdentifierInBlock         shift and go to state 39

state 27

    (81) InternalBlockBody -> ComposedBlockClause EventClauseInBlock . SynchronizationClause ObserverClauseQuestionMark
    (12) SynchronizationClause -> . SYNCHRONIZATION SynchronizationStar

    SYNCHRONIZATION shift and go to state 40

    SynchronizationClause          shift and go to state 41

state 28

    (30) EventClauseInClass -> EVENT . EventIdentifierInClass EventVirguleIdentifierStarInClass
    (31) EventIdentifierInClass -> . IDENTIFIER

    IDENTIFIER      shift and go to state 42

    EventIdentifierInClass         shift and go to state 43

state 29

    (82) BasicBlockBody -> StateClause EventClauseInClass . TransitionClause ObserverClauseQuestionMark
    (29) TransitionClause -> . TRANSITION TransitionStar

    TRANSITION      shift and go to state 45

    TransitionClause               shift and go to state 44

state 30

    (36) StateClause -> STATE StateIdentifier . StateVirguleIdentifierStar
    (39) StateVirguleIdentifierStar -> . empty
    (40) StateVirguleIdentifierStar -> . VIRGULE StateIdentifier StateVirguleIdentifierStar
    (1) empty -> .

    VIRGULE         shift and go to state 47
    EVENT           reduce using rule 1 (empty -> .)

    empty                          shift and go to state 46
    StateVirguleIdentifierStar     shift and go to state 48

state 31

    (22) StateIdentifier -> IDENTIFIER .

    VIRGULE         reduce using rule 22 (StateIdentifier -> IDENTIFIER .)
    EVENT           reduce using rule 22 (StateIdentifier -> IDENTIFIER .)


state 32

    (21) ComposedBlockClause -> ClassInstance ComposedBlockClause .

    EVENT           reduce using rule 21 (ComposedBlockClause -> ClassInstance ComposedBlockClause .)


state 33

    (20) ComposedBlockClause -> Block ComposedBlockClause .

    EVENT           reduce using rule 20 (ComposedBlockClause -> Block ComposedBlockClause .)


state 34

    (17) ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier . ClassInstanceVirguleIdentifierStar
    (15) ClassInstanceVirguleIdentifierStar -> . empty
    (16) ClassInstanceVirguleIdentifierStar -> . VIRGULE ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (1) empty -> .

    VIRGULE         shift and go to state 49
    BLOCK           reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    EVENT           reduce using rule 1 (empty -> .)

    empty                          shift and go to state 50
    ClassInstanceVirguleIdentifierStar shift and go to state 51

state 35

    (14) ClassInstanceIdentifier -> IDENTIFIER .

    VIRGULE         reduce using rule 14 (ClassInstanceIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 14 (ClassInstanceIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 14 (ClassInstanceIdentifier -> IDENTIFIER .)
    EVENT           reduce using rule 14 (ClassInstanceIdentifier -> IDENTIFIER .)


state 36

    (88) Block -> BLOCK BlockIdentifier BlockBody EndBlock .

    BLOCK           reduce using rule 88 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    CLASS           reduce using rule 88 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    $end            reduce using rule 88 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    IDENTIFIER      reduce using rule 88 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    EVENT           reduce using rule 88 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)


state 37

    (85) EndBlock -> END .

    BLOCK           reduce using rule 85 (EndBlock -> END .)
    CLASS           reduce using rule 85 (EndBlock -> END .)
    $end            reduce using rule 85 (EndBlock -> END .)
    IDENTIFIER      reduce using rule 85 (EndBlock -> END .)
    EVENT           reduce using rule 85 (EndBlock -> END .)


state 38

    (35) EventIdentifierInBlock -> IDENTIFIER .

    VIRGULE         reduce using rule 35 (EventIdentifierInBlock -> IDENTIFIER .)
    SYNCHRONIZATION reduce using rule 35 (EventIdentifierInBlock -> IDENTIFIER .)


state 39

    (32) EventClauseInBlock -> EVENT EventIdentifierInBlock . EventVirguleIdentifierStarInBlock
    (33) EventVirguleIdentifierStarInBlock -> . empty
    (34) EventVirguleIdentifierStarInBlock -> . VIRGULE EventIdentifierInBlock EventVirguleIdentifierStarInBlock
    (1) empty -> .

    VIRGULE         shift and go to state 54
    SYNCHRONIZATION reduce using rule 1 (empty -> .)

    EventVirguleIdentifierStarInBlock shift and go to state 52
    empty                          shift and go to state 53

state 40

    (12) SynchronizationClause -> SYNCHRONIZATION . SynchronizationStar
    (10) SynchronizationStar -> . empty
    (11) SynchronizationStar -> . Synchronization SynchronizationStar
    (1) empty -> .
    (9) Synchronization -> . MacroEventDefinition
    (7) MacroEventDefinition -> . EventIdentifierInSynchronization DEUXPOINTS EventPath AndCommercialEvenPathStar
    (8) EventIdentifierInSynchronization -> . IDENTIFIER

    OBSERVER        reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 57

    SynchronizationStar            shift and go to state 55
    EventIdentifierInSynchronization shift and go to state 56
    MacroEventDefinition           shift and go to state 58
    empty                          shift and go to state 59
    Synchronization                shift and go to state 60

state 41

    (81) InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause . ObserverClauseQuestionMark
    (79) ObserverClauseQuestionMark -> . empty
    (80) ObserverClauseQuestionMark -> . OBSERVER ObserverStar
    (1) empty -> .

    OBSERVER        shift and go to state 61
    END             reduce using rule 1 (empty -> .)

    ObserverClauseQuestionMark     shift and go to state 62
    empty                          shift and go to state 63

state 42

    (31) EventIdentifierInClass -> IDENTIFIER .

    VIRGULE         reduce using rule 31 (EventIdentifierInClass -> IDENTIFIER .)
    TRANSITION      reduce using rule 31 (EventIdentifierInClass -> IDENTIFIER .)


state 43

    (30) EventClauseInClass -> EVENT EventIdentifierInClass . EventVirguleIdentifierStarInClass
    (37) EventVirguleIdentifierStarInClass -> . empty
    (38) EventVirguleIdentifierStarInClass -> . VIRGULE EventIdentifierInClass EventVirguleIdentifierStarInClass
    (1) empty -> .

    VIRGULE         shift and go to state 66
    TRANSITION      reduce using rule 1 (empty -> .)

    empty                          shift and go to state 64
    EventVirguleIdentifierStarInClass shift and go to state 65

state 44

    (82) BasicBlockBody -> StateClause EventClauseInClass TransitionClause . ObserverClauseQuestionMark
    (79) ObserverClauseQuestionMark -> . empty
    (80) ObserverClauseQuestionMark -> . OBSERVER ObserverStar
    (1) empty -> .

    OBSERVER        shift and go to state 61
    END             reduce using rule 1 (empty -> .)

    empty                          shift and go to state 63
    ObserverClauseQuestionMark     shift and go to state 67

state 45

    (29) TransitionClause -> TRANSITION . TransitionStar
    (27) TransitionStar -> . empty
    (28) TransitionStar -> . Transition TransitionStar
    (1) empty -> .
    (23) Transition -> . EventIdentifierInTransition DEUXPOINTS OriginalStateIdentifierInTransition FLECHE DestStateIdentifierInTransition
    (26) EventIdentifierInTransition -> . IDENTIFIER

    OBSERVER        reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 72

    EventIdentifierInTransition    shift and go to state 68
    Transition                     shift and go to state 69
    TransitionStar                 shift and go to state 70
    empty                          shift and go to state 71

state 46

    (39) StateVirguleIdentifierStar -> empty .

    EVENT           reduce using rule 39 (StateVirguleIdentifierStar -> empty .)


state 47

    (40) StateVirguleIdentifierStar -> VIRGULE . StateIdentifier StateVirguleIdentifierStar
    (22) StateIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    StateIdentifier                shift and go to state 73

state 48

    (36) StateClause -> STATE StateIdentifier StateVirguleIdentifierStar .

    EVENT           reduce using rule 36 (StateClause -> STATE StateIdentifier StateVirguleIdentifierStar .)


state 49

    (16) ClassInstanceVirguleIdentifierStar -> VIRGULE . ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassInstanceIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 35

    ClassInstanceIdentifier        shift and go to state 74

state 50

    (15) ClassInstanceVirguleIdentifierStar -> empty .

    BLOCK           reduce using rule 15 (ClassInstanceVirguleIdentifierStar -> empty .)
    IDENTIFIER      reduce using rule 15 (ClassInstanceVirguleIdentifierStar -> empty .)
    EVENT           reduce using rule 15 (ClassInstanceVirguleIdentifierStar -> empty .)


state 51

    (17) ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar .

    BLOCK           reduce using rule 17 (ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar .)
    IDENTIFIER      reduce using rule 17 (ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar .)
    EVENT           reduce using rule 17 (ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar .)


state 52

    (32) EventClauseInBlock -> EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock .

    SYNCHRONIZATION reduce using rule 32 (EventClauseInBlock -> EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock .)


state 53

    (33) EventVirguleIdentifierStarInBlock -> empty .

    SYNCHRONIZATION reduce using rule 33 (EventVirguleIdentifierStarInBlock -> empty .)


state 54

    (34) EventVirguleIdentifierStarInBlock -> VIRGULE . EventIdentifierInBlock EventVirguleIdentifierStarInBlock
    (35) EventIdentifierInBlock -> . IDENTIFIER

    IDENTIFIER      shift and go to state 38

    EventIdentifierInBlock         shift and go to state 75

state 55

    (12) SynchronizationClause -> SYNCHRONIZATION SynchronizationStar .

    OBSERVER        reduce using rule 12 (SynchronizationClause -> SYNCHRONIZATION SynchronizationStar .)
    END             reduce using rule 12 (SynchronizationClause -> SYNCHRONIZATION SynchronizationStar .)


state 56

    (7) MacroEventDefinition -> EventIdentifierInSynchronization . DEUXPOINTS EventPath AndCommercialEvenPathStar

    DEUXPOINTS      shift and go to state 76


state 57

    (8) EventIdentifierInSynchronization -> IDENTIFIER .

    DEUXPOINTS      reduce using rule 8 (EventIdentifierInSynchronization -> IDENTIFIER .)


state 58

    (9) Synchronization -> MacroEventDefinition .

    IDENTIFIER      reduce using rule 9 (Synchronization -> MacroEventDefinition .)
    OBSERVER        reduce using rule 9 (Synchronization -> MacroEventDefinition .)
    END             reduce using rule 9 (Synchronization -> MacroEventDefinition .)


state 59

    (10) SynchronizationStar -> empty .

    OBSERVER        reduce using rule 10 (SynchronizationStar -> empty .)
    END             reduce using rule 10 (SynchronizationStar -> empty .)


state 60

    (11) SynchronizationStar -> Synchronization . SynchronizationStar
    (10) SynchronizationStar -> . empty
    (11) SynchronizationStar -> . Synchronization SynchronizationStar
    (1) empty -> .
    (9) Synchronization -> . MacroEventDefinition
    (7) MacroEventDefinition -> . EventIdentifierInSynchronization DEUXPOINTS EventPath AndCommercialEvenPathStar
    (8) EventIdentifierInSynchronization -> . IDENTIFIER

    OBSERVER        reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 57

    SynchronizationStar            shift and go to state 77
    EventIdentifierInSynchronization shift and go to state 56
    MacroEventDefinition           shift and go to state 58
    empty                          shift and go to state 59
    Synchronization                shift and go to state 60

state 61

    (80) ObserverClauseQuestionMark -> OBSERVER . ObserverStar
    (77) ObserverStar -> . empty
    (78) ObserverStar -> . Observer ObserverStar
    (1) empty -> .
    (76) Observer -> . ObserverIdentifier DEUXPOINTS ObserverOr
    (75) ObserverIdentifier -> . IDENTIFIER

    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 79

    ObserverStar                   shift and go to state 78
    ObserverIdentifier             shift and go to state 80
    Observer                       shift and go to state 81
    empty                          shift and go to state 82

state 62

    (81) InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark .

    END             reduce using rule 81 (InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark .)


state 63

    (79) ObserverClauseQuestionMark -> empty .
